--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -196,7 +196,9 @@
 
   </div> -->
 
-  <div class="span2 col-md-2" style="position:absolute; right:0">  
+  <div class="span2 col-md-2 " style="position:absolute; right:0">  
+
+  <!-- <div class="span2 col-md-2 col-md-offset-10">   -->
    <!-- The boxes on the right this time-->
 
    <div class="row">
@@ -369,7 +371,7 @@
 
 
  <div class="row">
-  <div class="col-md-12">
+
 
     <div class="col-md-6">
       <h1 id="page_title"> </h1>
@@ -382,7 +384,6 @@
 
 
      </div>
-   </div>
  </div>
 </div>
 <div class="row">
