--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -131,15 +131,15 @@
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-             <ul class="dropdown-menu">
-             <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
-             <li class="divider"></li>
-             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+               <ul class="dropdown-menu">
+                 <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li class="divider"></li>
+                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-             </ul>
+               </ul>
              </script>
            </li>
          </ul>
@@ -192,8 +192,17 @@
   <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
 
     <div class="row">
-      <div class="col-md-12">
+
+      <div class="col-md-6">
         <h1>Overview <small> Your overview</small></h1>
+      </div>
+      <div class="col-md-6">
+        <button id="depositBtn" type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#depositModal">Deposit
+        </button>
+        <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw
+        </button>
+      </div>
+      <div class="col-md-12">
         <ol class="breadcrumb">
           <li><i class="fa fa-dashboard"></i> Overview</a></li>
         </ol>
@@ -215,9 +224,9 @@
               </div>
               <div id ="funds_current" class="col-xs-8 text-right">
                 <script id="funds_current_template" type="x-tmpl-mustache"> 
-                <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+                  <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
 
-                <p class="announcement-text">Funds</p>
+                  <p class="announcement-text">Funds</p>
                 </script>
               </div>
             </div>
@@ -246,9 +255,9 @@
               </div>
               <div id = "rewards_earned_total_by_user" class="col-xs-8 text-right">
                 <script id="rewards_earned_total_by_user_template" type="x-tmpl-mustache"> 
-                <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+                  <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
 
-                <p class="announcement-text">Rewards Earned</p>
+                  <p class="announcement-text">Rewards Earned</p>
                 </script>
               </div>
             </div>
@@ -277,9 +286,9 @@
               </div>
               <div id="pieces_owned_current" class="col-xs-8 text-right">
                 <script id="pieces_owned_current_template" type="x-tmpl-mustache"> 
-                <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
+                  <p class="announcement-heading"><i class="fa fa-btc"></i>{{.}}</p>
 
-                <p class="announcement-text">Pieces Value</p>
+                  <p class="announcement-text">Pieces Value</p>
                 </script>
               </div>
             </div>
@@ -309,9 +318,9 @@
               <div id="users_reputation" class="col-xs-8 text-right">
 
                 <script id="users_reputation_template" type="x-tmpl-mustache">
-                <p class="announcement-heading">{{.}}</p>
+                  <p class="announcement-heading">{{.}}</p>
 
-                <p class="announcement-text">Reputation</p>
+                  <p class="announcement-text">Reputation</p>
                 </script> 
               </div>
             </div>
@@ -344,60 +353,90 @@
           </div>
           <div id="recent_activity" class="panel-body">
             <script id="recent_activity_template" type="x-tmpl-mustache"> 
-            <table id="recent_activity_table" class="table table-hover table-striped tablesorter">
-            <thead> 
-            <tr>
-            <th>Time <i class="fa fa-sort"></i></th>
-            <th>Type <i class="fa fa-sort"></th>
-            <th>Recipient <i class="fa fa-sort"></th>
-            <th>Funds <i class="fa fa-sort"></th>
-            </tr>
-            </thead>
+              <table id="recent_activity_table" class="table table-hover table-striped tablesorter">
+                <thead> 
+                  <tr>
+                    <th>Time <i class="fa fa-sort"></i></th>
+                    <th>Type <i class="fa fa-sort"></th>
+                    <th>Recipient <i class="fa fa-sort"></th>
+                    <th>Funds <i class="fa fa-sort"></th>
+                  </tr>
+                </thead>
 
-            <tbody>
+                <tbody>
 
-            {{#.}}
+                  {{#.}}
 
-            <tr> 
-            <td>{{time_}}</td>
-            <td>{{type}}</td>
-            <td>{{recipient}}</td>
-            <td>{{funds}}</td>
-            </tr>
-            {{/.}}
+                  <tr> 
+                    <td>{{time_}}</td>
+                    <td>{{type}}</td>
+                    <td>{{recipient}}</td>
+                    <td>{{funds}}</td>
+                  </tr>
+                  {{/.}}
 
-            </tbody>
-            </script>
-          </table>
+                </tbody>
+              </script>
+            </table>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Pieces owned value</h3>
+          </div>
+          <div class="panel-body">
+            <div class = "small-chart" id="pieces_owned_value_current"></div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <!-- a big ass chart -->
+      <div class="row">
+        <div class="col-lg-12">
 
         </div>
       </div>
+
     </div>
-    <div class="col-md-6">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Pieces owned value</h3>
-        </div>
-        <div class="panel-body">
-          <div class = "small-chart" id="pieces_owned_value_current"></div>
-        </div>
-      </div>
-    </div>
-
-
-
-    <!-- a big ass chart -->
-    <div class="row">
-      <div class="col-lg-12">
-
-      </div>
-    </div>
-
+    <!-- end of wrapper -->
   </div>
-  <!-- end of wrapper -->
 </div>
-</div>
+<!-- Modals -->
+<div id="depositModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
 
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Deposit</h4>
+      </div>
+      <div class="modal-body">
+        <form id="depositForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
+            <div class="col-sm-10 input-group">
+              <span class="input-group-addon">$</span>
+              <input name="deposit" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-value=".01"
+              data-bv-greaterthan-message="Must be > .01"
+
+              >
+            </div>
+          </div>
+
+          <button id="placedepositBtn" type="submit" class="btn btn-primary">Place deposit</button>
+        </form>
+
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
 
